Fix alignment issue.

--- a/source/themes/jackson/static/default.css
+++ b/source/themes/jackson/static/default.css
@@ -8,10 +8,6 @@
 @import url("grid.css");
 
 
-#doc_content div.document {
-    background:#FFF;
-}
-
 div.sphinxsidebar {
 }
 
